[project]
name = "pdf-audio-summarizer"
version = "0.1.0"
description = "Convert scientific PDFs to audio summaries using Claude and ElevenLabs"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "streamlit>=1.28.0",
    
    # PDF processing
    "pypdf2>=3.0.0",
    "pdfplumber>=0.9.0",
    
    # API clients
    "anthropic>=0.7.0",
    "elevenlabs>=0.2.0",
    "httpx>=0.25.0",
    
    # Configuration and utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/agdoko/pdf-audio-summarizer"
Repository = "https://github.com/agdoko/pdf-audio-summarizer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true